--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ div {text-align: left;}
     <title>Motorcycle Model</title>
 
 <!-- <script type="text/javascript" src="https://rawgit.com/lmccart/p5.js/master/lib/addons/p5.dom.js"></script> -->
-<script src=https://cdnjs.cloudflare.com/ajax/libs/mathjs/3.3.0/math.min.js></script>
+<script src=https://cdnjs.cloudflare.com/ajax/libs/mathjs/11.11.0/math.min.js></script>
 <!-- <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script> -->
 <script src="https://cdn.jsdelivr.net/gh/nicolaspanel/numjs@0.15.1/dist/numjs.min.js"></script>
 <script type="text/x-mathjax-config">
@@ -36,7 +36,7 @@ div {text-align: left;}
     <p style="text-align: center">
 </p>
 
-
+<script src="linalg.js"></script>
 <script src="model.js"></script>
 </body>
 </html>
