--- a/index.html
+++ b/index.html
@@ -8,7 +8,14 @@
   div {text-align: left;}
 </style>
 <title>4th Order Point-Mass Motorcycle Model</title>
+<meta property="og:title" content="Interactive Motorcycle Model">
+  <meta name="twitter:title" content="Interactive Motorcycle Model">
 
+  <meta name="description" content="4th-order linear dynamic model of motorcycle dynamics">
+  <meta property="og:description" content="4th-order linear dynamic model of motorcycle dynamics">
+  <meta name="twitter:description" content="4th-order linear dynamic model of motorcycle dynamics">
+
+  <meta property="og:image" content="assets/preview.jpg">
 <!-- <script type="text/javascript" src="https://rawgit.com/lmccart/p5.js/master/lib/addons/p5.dom.js"></script> -->
 <script src=https://cdnjs.cloudflare.com/ajax/libs/mathjs/11.11.0/math.min.js></script>
 <script src="https://cdn.jsdelivr.net/npm/chart.js@2.8.0"></script>
