added website link

--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@ src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-
 </head>
 <body>
   <h3 style="text-align: center">4th-Order Point-Mass Motorcycle Model</h1><small>
+    <p style="text-align: center"> &copy <a href = "https://www.alexanderallenbrown.com">Alexander Brown, Ph.D. </a></p>
   <p style="text-align: center"> Nominal parameters are based on Lafayette College's autonomous Razor MX350 electric minibike <br>
     Note that this model describes "hands-free" uncontrolled riding; no robotic or human steering or leaning!
     <br>
