new ver functional, have to change renderer and check values

--- a/index.html
+++ b/index.html
@@ -41,10 +41,14 @@ src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-
 <body>
   <h3 style="text-align: center">4th-Order Point-Mass Motorcycle Model</h1><small>
     <p style="text-align: center"> &copy <a href = "https://sites.lafayette.edu/brownaa">Alexander Brown, Ph.D. </a></p>
-  <p style="text-align: center"> Nominal parameters are based on Lafayette College's autonomous Razor MX350 electric minibike <br>
-    Note that this model describes "hands-free" uncontrolled riding; no robotic or human steering or leaning!
+  <p style="text-align: center"> Nominal parameters are based on a 2021 Kawasaki KX450 <br>
+    Note that this model describes the bike's response to steer torque inputs at a CONSTANT forward speed.
     <br>
-    Assumptions include no tire slip, knife-edged tires, two independent frames (fork and rear), small lean/steering angles, no longitudinall accel/decel.
+    Assumptions include no tire slip, knife-edged tires, two independent frames (fork and rear), small lean/steering angles, no longitudinall accel/decel, no suspension effects.
+
+    This model is designed to help with understanding how changing a race bike's rake angle and triple clamp offsets influence how it handles.
+
+    By moving the sliders, you can see how the bike's 'free running' behavior is changed; whether the steering becomes 'lighter' or the bike starts to oscillate (head shake), etc.
   </p>
 </small>
   <div id="table-top" style="width:90vw; display: table; border: solid 1px grey; border-radius: 10px; text-align: center; width: 90vw;margin-left: auto; margin-right: auto">
@@ -61,74 +65,18 @@ src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.7/MathJax.js?config=TeX-
             <input type="range" display="inline-block" min="1" max="100" value="40" class="slider" id="v_slider">
           </div>
           <div class="slidecontainer" style="text-align:center" width=75%>
-            Rear Frame/Rider CG x (m): <label id="a_sliderval" style="text-align:center" display="inline" float="right">.3386</label> m <br>
-            <input type="range" display="inline-block" min="250" max="500" value="339" class="slider" id="a_slider">
-          </div>
-
-          <div class="slidecontainer" style="text-align:center" width=75%>
-            Rear Frame/Rider CG z (m): <label id="h_sliderval" style="text-align:center" display="inline" float="right">.256</label> m <br>
-            <input type="range" display="inline-block" min="125" max="375" value="256" class="slider" id="h_slider">
-          </div>
-
-          <div class="slidecontainer" style="text-align:center" width=75%>
-            Rear Frame/Rider mass (kg): <label id="mr_sliderval" style="text-align:center" display="inline" float="right">11</label> kg <br>
-            <input type="range" display="inline-block" min="50" max="250" value="110" class="slider" id="mr_slider">
-          </div>
-
-          <div class="slidecontainer" style="text-align:center" width=75%>
-            Front Frame CG X offset: <label id="xf_sliderval" style="text-align:center" display="inline" float="right">-.14</label> m <br>
-            <input type="range" display="inline-block" min="-200" max="200" value="-140" class="slider" id="xf_slider">
-          </div>
-
-          <div class="slidecontainer" style="text-align:center" width=75%>
-            Front Frame CG Z Location: <label id="zf_sliderval" style="text-align:center" display="inline" float="right">.46</label> m <br>
-            <input type="range" display="inline-block" min="300" max="500" value="465" class="slider" id="zf_slider">
-          </div>
-
-          <div class="slidecontainer" style="text-align:center" width=75%>
-            Front Frame mass: <label id="mf_sliderval" style="text-align:center" display="inline" float="right">2.2</label> kg <br>
-            <input type="range" display="inline-block" min="1" max="500" value="220" class="slider" id="mf_slider">
-          </div>
-
-
-        </div>
-        <div style="display: table-cell; vertical-align: top; height: 250px; width= 20vw;background: none; padding: 1em">
-
-          <div class="slidecontainer" style="text-align:center" width=75%>
-            Front Wheel radius: <label id="Rfw_sliderval" style="text-align:center" display="inline" float="right">.159</label> m <br>
-            <input type="range" display="inline-block" min="100" max="250" value="159" class="slider" id="Rfw_slider">
-          </div>
-
-          <div class="slidecontainer" style="text-align:center" width=75%>
-            Front Wheel mass: <label id="mfw_sliderval" style="text-align:center" display="inline" float="right">1.5</label> kg <br>
-            <input type="range" display="inline-block" min="1" max="100" value="15" class="slider" id="mfw_slider">
-          </div>
-
-          <div class="slidecontainer" style="text-align:center" width=75%>
-            Rear Wheel radius: <label id="Rrw_sliderval" style="text-align:center" display="inline" float="right">.159</label> m <br>
-            <input type="range" display="inline-block" min="100" max="250" value="159" class="slider" id="Rrw_slider">
-          </div>
-
-          <div class="slidecontainer" style="text-align:center" width=75%>
-            Rear Wheel mass: <label id="mrw_sliderval" style="text-align:center" display="inline" float="right">2.5</label> kg <br>
-            <input type="range" display="inline-block" min="1" max="100" value="25" class="slider" id="mrw_slider">
-          </div>
-
-          <div class="slidecontainer" style="text-align:center" width=75%>
-            Wheelbase: <label id="b_sliderval" style="text-align:center" display="inline" float="right">.767</label> m <br>
-            <input type="range" display="inline-block" min="500" max="1000" value="767" class="slider" id="b_slider">
-          </div>
-
-
-
-          <div class="slidecontainer" style="text-align:center" width=75%>
-            Trail: <label id="c_sliderval" style="text-align:center" display="inline" float="right">.023</label> m <br>
-            <input type="range" display="inline-block" min="100" max="500" value="230" class="slider" id="c_slider">
+            Triple Clamp Offset (mm): <label id="ut_sliderval" style="text-align:center" display="inline" float="right">20</label> m <br>
+            <input type="range" display="inline-block" min="10" max="30" value="20" class="slider" id="ut_slider">
           </div>
 
           <div class="slidecontainer" style="text-align:center" width=75%>
             Rake Angle: <label id="lam_sliderval" style="text-align:center" display="inline" float="right">25.25</label> degrees <br>
             <input type="range" display="inline-block" min="1" max="450" value="255" class="slider" id="lam_slider">
+          </div>
+
+          <div class="slidecontainer" style="text-align:center" width=75%>
+            Steer Friction/Damping: <label id="bsteer_sliderval" style="text-align:center" display="inline" float="right">0</label> Nms <br>
+            <input type="range" display="inline-block" min="0" max="450" value="0" class="slider" id="bsteer_slider">
           </div>
 
         </div>
